# autopilot-serialconnector

./: .gitignore  .gitmodules  CMakeLists.txt  database.c  database.h  databaseCommands.h  main.c  remoteRun.sh  serialPort.c  serialPort.h
protobuf/: communicationProtocol.pb-c.c  communicationProtocol.pb-c.h
serial/: serialPort.c  serialPort.h
serialConnector.xcodeproj/: project.pbxproj
serialConnector.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
sqlite/: sqlite3.h  sqlite3ext.h
